<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/search_hot_words"
        android:textColor="@color/qmui_config_color_gray_3"
        android:textSize="12sp" />

    <com.qmuiteam.qmui.widget.QMUIFloatLayout
        android:id="@+id/float_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <RelativeLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="invisible"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_history"
            android:textColor="@color/qmui_config_color_gray_3"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="?attr/app_skin_primary_color"
            android:textSize="12sp"
            android:text="@string/search_clear_history" />


    </RelativeLayout>


</LinearLayout>