<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.theone.demo.ui.state.AddShareArticleViewModel" />

        <variable
            name="click"
            type="com.theone.demo.ui.fragment.share.AddShareArticleFragment.ProxyClick" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/article_add_title_style"
                android:text="@string/article_title" />

            <EditText
                style="@style/article_add_edittext_style"
                android:text="@={vm.title}" />

            <TextView
                style="@style/article_add_title_style"
                android:text="@string/article_url" />

            <EditText
                style="@style/article_add_edittext_style"
                android:text="@={vm.url}" />

            <TextView
                style="@style/article_add_title_style"
                android:text="@string/article_publisher" />

            <EditText
                style="@style/article_add_edittext_style"
                android:enabled="false"
                android:text="@={vm.publisher}" />

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="12dp"
                android:text="添  加"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:qmui_backgroundColor="?attr/app_skin_primary_color"
                app:qmui_borderWidth="0dp"
                app:qmui_isRadiusAdjustBounds="true"
                bind:noRepeatClick="@{()-> click.add()}" />

        </LinearLayout>
    </FrameLayout>

</layout>